<resources>
    <string name="app_name">JustGo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navegacao">Navegacao</string>
    <string name="title_activity_home_page_maps">Map</string>

    //strings activity_navegacao_drawer

    <string name="configuracoes">Configurações</string>
    <string name="experiencias">Experiências</string>
    <string name="pesquisar"> Pesquisar </string>
    <string name="sugestoes"> Sugestões </string>
    <string name="sair"> Sair </string>


    // strings activity_navegacao
    <string name="sobre"> Sobre </string>

    // strings activity_sobre
    <string name="sobreNos"> A JustGO é [...] </string>

    // strings activity_main
    <string name="cadastreFacebook"> Cadastre-se com o Facebook </string>
    <string name="cadastreEmail"> Cadastre-se com e-mail </string>
    <string name="ou">-ou-</string>
    <string name="jaTemConta"> Ja possui uma conta?</string>
    <string name="entrar"> Entrar </string>

    // strings activity_login e activity_cadastro
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirme sua senha</string>
    <string name="entrarLogin"> Entrar </string>
    <string name="cadastre"> Cadastre-se </string>
    <string name="nome"> Nome </string>
    <string name="title_activity_origem_destino_maps">Map</string>
    <string name="title_activity_experiencias">Experiencias</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nova_rota">Map</string>
    <string name="title_activity_adicionar_pontos">Map</string>

    <string name="origem">Origem</string>
    <string name="destino">Destino</string>
    <string name="adicionar">Adicionar</string>
    <string name="salvar">Salvar</string>
    <string name="visualizar">Visualizar</string>
    <string name="confirmar">Confirmar</string>
    <string name="descricao">Descrição</string>
    <string name="gasto">Gasto </string>
    <string name="tempo">Tempo </string>
    <string name="novaRota">Nova Rota</string>
    <string name="editarPonto">Editar Ponto</string>
    <string name="selecione">Selecione</string>
    <string name="title_activity_maps_home">Map</string>
    <string name="title_activity_sobre">Map</string>


    // activity_finalizar_cadastro_rota
    <string name="tituloRota"> Título Ex: Brasil - Itália  </string>
    <string name="descricaoRota"> Descrição adicional </string>
    <string name="finalizarCadastroRota"> Insira as informações abaixo para finalizar sua rota </string>
    <string name="finalizar">Finalizar</string>

    // editar ponto
    <string name="addImagem">Adicionar Imagem</string>

    //pontoItem

    <string name="origem2">Origem:</string>
    <string name="destino2">Destino:</string>
    <string name="meioDeTransporte2">Meio de Transporte:</string>
    <string name="tempo2">Tempo:</string>
    <string name="descricao2">Descrição:</string>
    <string name="gasto2">Gasto:</string>

    <string name="para">para</string>
    <string name="title_activity_mapa_mostrat_experiencia">Map</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="textoPesquisa"> Insira a origem ou o destino que deseja pesquisar </string>
    <string name="verRotaNoMapa">Ver rota no mapa </string>
    <string name="textoEditarPonto"> Insira abaixo as informações relacionadas ao ponto</string>
</resources>

