<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/branco">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/branco"
        tools:context="com.example.justgo.LogineCadastro.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:padding="10dp"
                android:src="@drawable/just_go" />

            <EditText
                android:id="@+id/nomeCadastro"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:paddingLeft="3dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/emailCadastro"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="3dp" />

            <EditText
                android:id="@+id/senhaCadastro"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/senha"
                android:paddingLeft="3dp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/ConfirmarSenhaCadastro"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:hint="@string/confirmarSenha"
                android:paddingLeft="3dp" />

            <Button
                android:id="@+id/botaoCadastrar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/borda_botao"
                android:onClick="botaoCadastrar"
                android:text="@string/cadastre"
                android:textColor="@color/letraBotao" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>