<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.justgo.CadastroRota.EditarPonto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/descricaoPonto"
            android:hint="@string/descricao"
            android:inputType="text" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="230dp"
            android:layout_height="40dp" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/precoPonto"
            android:hint="@string/gasto"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/tempoPonto"
            android:hint="@string/tempo"
            android:inputType="time"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botaoEditarPonto"
            android:text="@string/confirmar"
            android:textColor="@color/letraBotao"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_botao"
            android:onClick="botaoConfirmarEditarPonto"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adicionar Imagens"
            android:textColor="@color/letraBotao"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_botao"
            android:onClick="botaoAdicionarImagemEditarPonto"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imagem"/>
    </LinearLayout>
</LinearLayout>
