<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.justgo.LogineCadastro.LoginActivity"
    android:background="@drawable/fundo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="2dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/borda">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/ic_login"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_email"
                android:background="@color/cinzaClaro"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@color/cinzaClaro"
                android:paddingLeft="10dp"
                android:hint="@string/email"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_senha"
                android:background="@color/cinzaClaro"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/senhaLogin"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@color/cinzaClaro"
                android:paddingLeft="10dp"
                android:hint="@string/senha"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/botaoEntrarLogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:textColor="@color/letraBotao"
            android:text="@string/entrarLogin"
            android:background="@drawable/borda_botao"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>

